# kbo-data

./: LICENSE  README.md  README.rst  Untitled.ipynb  pyproject.toml
docs/: batter.md  pitcher.md  scoreboard.md
kbo_data/: __init__.py
kbo_data/config/: config.ini
kbo_data/get/: data.py  html.py  merge_html.py  parser.py  schedule.py  util.py
kbo_data/parser/: html.py
kbodata/: __init__.py
kbodata/config/: config.ini
kbodata/docs/: batter.md
kbodata/get/: __init__.py  data.py  game.py  schedule.py
kbodata/load/: batter.py  pitcher.py  scoreboard.py
kbodata/parser/: batter.py  config.ini  html.py  page.py  pitcher.py  schedule.py  scoreboard.py  util.py
tests/: test_kbodata.py
