[tool.poetry]
name = "kbodata"
version = "0.1.0"
description = "Scraping Korea Baseball Game information"
authors = ["Hyeonji-Ryu <guswl3940@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Hyeonji-Ryu/kbo-data"
documentation = "https://github.com/Hyeonji-Ryu/kbo-data/tree/main/docs"

# Requirements
[tool.poetry.dependencies]
python = "^3.7.1"
selenium = "^3.141.0"
pandas = "^1.2.2"
bs4 = "^0.0.1"
lxml = "^4.6.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
