[tool.poetry]
name = "kbodata"
version = "0.2.2"
description = "Scraping Korea Baseball Game information"
authors = ["Hyeonji-Ryu <dev.bearabbit@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Hyeonji-Ryu/kbo-data"
documentation = "https://github.com/Hyeonji-Ryu/kbo-data/tree/main/docs"

# Requirements
[tool.poetry.dependencies]
python = "^3.9.0"
selenium = "^4.21.0"
pandas = "^2.2.2"
bs4 = "^0.0.2"
lxml = "^5.2.2"
requests = "^2.31.0"
tqdm = "^4.66.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
